// tag::header[]
[width=100%,cols="10%, 30%, 60%", frame=none, grid=rows, options="header"]
|===
| *Date* | *Solution Area* | *Description of change*
// end::header[]
// tag::ent-db[]
| 05/01/2024 | Database | New Oracle Sizing Guidance for Azure NetApp Files
// end::ent-db[]
// tag::containers[]
| 04/19/2024 | Red Hat OpenShift Virtualization | Added new content for CI integration for VMs in OpenShift Virtualization
// end::containers[]
// tag::containers[]
| 04/16/2024 | Red Hat OpenShift Virtualization | Added new content for data protection of VMs in OpenShift Virtualization
// end::containers[]
// tag::ent-db[]
| 04/17/2024 | Database | SnapCenter Oracle Clone Lifecycle Automation
// end::ent-db[]
// tag::ent-db[]
| 04/03/2024 | Database | New TR-4990: Quick Recovery of Oracle VLDB with Incremental Merge on ANF
// end::ent-db[]
// tag::ent-db[]
| 02/15/2024 | Database | New TR-4988: Oracle Database Backup, Recovery, and Clone on ANF with SnapCenter
// end::ent-db[]
// tag::ent-db[]
| 02/07/2024 | Database | New TR-4987: Simplified, Automated Oracle Deployment on Amazon FSx ONTAP with iSCSI
// end::ent-db[]
// tag::ent-db[]
| 12/18/2023 | Database | New TR-4986: Simplified, Automated Oracle Deployment on Amazon FSx ONTAP with iSCSI
// end::ent-db[]
// tag::rhhc[]
| 12/12/2023 | Hybrid Multicloud with Red Hat OpenShift | Added new content for Azure Cloud
// end::rhhc[]
// tag::ent-db[]
| 12/07/2023 | Database | TR-4983: Simplified, Automated Oracle Deployment on NetApp ASA with iSCSI
// end::ent-db[]
// tag::ent-db[]
| 11/27/2023 | Database | TR-4979: Simplified, self-managed Oracle in VMware Cloud on AWS with guest-mounted FSx ONTAP
// end::ent-db[]
// tag::vmw-sc[]
| 11/07/2023 | Sovereign Cloud | New content: StorageGRID as an Object Store Extension
| 11/06/2023 | Sovereign Cloud | New content for VMware Sovereign Cloud with NetApp
// end::vmw-sc[]
// tag::aiml[]
| 10/11/2023 | AI | New solution: Hybrid Multicloud MLOps with Domino Data Lab and NetApp