@@ -40,7 +40,7 @@ include::_include/change-log.adoc[tags=header;rhhc]
 --
 .Virtualization
 --
-include::_include/change-log.adoc[tags=header;vmware;vdi]
+include::_include/change-log.adoc[tags=header;vmware;vdi;hyperv]
 --
 .Containers
 --
