@@ -12,8 +12,8 @@ indexpage:
 #
     - title: "Hyper-V Virtualization"
       links:
-        - title: "title goes here"
-          url: ../about.html
+        - title: "Deploying Microsoft Hyper-V on NetApp Storage"
+          url: hyperv-deploy.html
 #
     - title: "Additional Resources"
       links:
