@@ -9,8 +9,8 @@ entries:
 #
   - title: "Hyper-V Virtualization"
     entries:
-      - title: "title goes here"
-        url: ../about.html
+      - title: "Deploying Microsoft Hyper-V on NetApp Storage"
+        url: hyperv-deploy.html
 #
   - title: "Additional Resources"
     entries:
