@@ -3,6 +3,9 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
+// tag::hyperv[]
+| 05/10/2024 | Virtualization | Added deployement of Hyper-V on NetApp content
+// end::hyperv[]
 // tag::ent-db[]
 | 05/01/2024 | Database | New Oracle Sizing Guidance for Azure NetApp Files
 // end::ent-db[]
